--- a/index.html
+++ b/index.html
@@ -9,86 +9,103 @@
 </head>
 
 <body>
+  <div class="container">
 
-  <h1>Classic Apple Pie Recipe</h1>
-  <p> Recipe by: Tasty, found on https://tasty.co/recipe/apple-pie-from-scratch</p>
+    <header class="header">
+      <h1>Classic Apple Pie Recipe</h1>
+      <p>Recipe by: Tasty, found on <a href="https://tasty.co/recipe/apple-pie-from-scratch" target="_blank">tasty.co</a></p>
+    </header>
 
-  <figure>
-    <img src="Apple_pie.jpg" alt="Delicious homemade apple pie" width="400">
-    <figcaption>Image by: Wikimedia Commons</figcaption>
-  </figure>
+    <div class="row">
+      <div class="column links">
+        <h2>Links</h2>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Recipes</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
 
-  <h2>Ingredients</h2>
-  <h3>Pie Dough</h3>
-  <ul>
-    <li>2 ½ cups flour</li>
-    <li>1 teaspoon salt</li>
-    <li>1 ½ sticks cold butter, cubed</li>
-    <li>8 tablespoons ice water, or as needed</li>
-  </ul>
+      <div class="column image-content">
+        <figure>
+          <img src="Apple_pie.jpg" alt="Delicious homemade apple pie" width="400">
+          <figcaption>Image by: Wikimedia Commons</figcaption>
+        </figure>
+      </div>
 
-  <h3>Filling</h3>
-  <ul>
-    <li>2 ½ lbs Granny Smith apples, peeled, cored, and sliced</li>
-    <li>¾ cup sugar</li>
-    <li>2 tablespoons flour</li>
-    <li>½ teaspoon salt</li>
-    <li>1 teaspoon cinnamon</li>
-    <li>¼ teaspoon nutmeg</li>
-    <li>Juice from ½ lemon</li>
-    <li>1 egg, beaten</li>
-    <li>1 tablespoon sugar</li>
-  </ul>
+      <div class="column rating-conversion">
+        <h2>Rating</h2>
+        <p>⭐⭐⭐⭐⭐</p>
+        <h2>Conversion</h2>
+        <form>
+          <label for="cups">Cups:</label>
+          <input type="number" id="cups" name="cups">
+          <input type="submit" value="Convert">
+        </form>
+      </div>
+    </div>
 
-  <h3>Topping</h3>
-  <ul>
-    <li>1 scoop vanilla ice cream (optional)</li>
-  </ul>
+    <div class="row">
+      <div class="column ingredients">
+        <h2>Ingredients</h2>
+        <h3>Pie Dough</h3>
+        <ul>
+          <li>2 ½ cups flour</li>
+          <li>1 teaspoon salt</li>
+          <li>1 ½ sticks cold butter, cubed</li>
+          <li>8 tablespoons ice water, or as needed</li>
+        </ul>
 
-  <h2>Directions</h2>
-  <ol>
-    <li>In a medium-sized bowl, add flour and salt, and mix with a fork.</li>
-    <li>Mix in cold, cubed butter with the fork until the mixture resembles small peas.</li>
-    <li>Gradually add ice water until dough starts to come together. Knead into a ball and refrigerate.</li>
-    <li>In a bowl, combine the apple slices with sugar, flour, salt, cinnamon, nutmeg, and lemon juice. Refrigerate.</li>
-    <li>Preheat the oven to 375°F (200°C).</li>
-    <li>Roll out the pie dough and line a pie dish with one half. Fill with the apple mixture.</li>
-    <li>Cover the pie with the second half of the dough, crimp the edges, and brush with beaten egg and sugar.</li>
-    <li>Cut slits into the top of the pie for ventilation and bake for 50-60 minutes until golden brown.</li>
-    <li>Let the pie cool before slicing and serve with vanilla ice cream if desired.</li>
-  </ol>
+        <h3>Filling</h3>
+        <ul>
+          <li>2 ½ lbs Granny Smith apples, peeled, cored, and sliced</li>
+          <li>¾ cup sugar</li>
+          <li>2 tablespoons flour</li>
+          <li>½ teaspoon salt</li>
+          <li>1 teaspoon cinnamon</li>
+          <li>¼ teaspoon nutmeg</li>
+          <li>Juice from ½ lemon</li>
+          <li>1 egg, beaten</li>
+          <li>1 tablespoon sugar</li>
+        </ul>
 
-  <h2>Conversion</h2>
-  <form>
-    <label for="cups">Cups:</label>
-    <input type="number" id="cups" name="cups" step="0.01"><br><br>
+        <h3>Topping</h3>
+        <ul>
+          <li>1 scoop vanilla ice cream (optional)</li>
+        </ul>
+      </div>
 
-    <label for="tablespoons">Tablespoons:</label>
-    <input type="number" id="tablespoons" name="tablespoons" step="0.01"><br><br>
+      <div class="column equipment">
+        <h2>Equipment</h2>
+        <ul>
+          <li>Pie dish</li>
+          <li>Mixing bowl</li>
+          <li>Rolling pin</li>
+          <li>Measuring cups and spoons</li>
+        </ul>
+      </div>
 
-    <label for="grams">Grams:</label>
-    <input type="number" id="grams" name="grams" step="1"><br><br>
-  </form>
+      <div class="column directions">
+        <h2>Directions</h2>
+        <ol>
+          <li>In a medium-sized bowl, add flour and salt, and mix with a fork.</li>
+          <li>Mix in cold, cubed butter with the fork until the mixture resembles small peas.</li>
+          <li>Gradually add ice water until dough starts to come together. Knead into a ball and refrigerate.</li>
+          <li>In a bowl, combine the apple slices with sugar, flour, salt, cinnamon, nutmeg, and lemon juice. Refrigerate.</li>
+          <li>Preheat the oven to 375°F (200°C).</li>
+          <li>Roll out the pie dough and line a pie dish with one half. Fill with the apple mixture.</li>
+          <li>Cover the pie with the second half of the dough, crimp the edges, and brush with beaten egg and sugar.</li>
+          <li>Cut slits into the top of the pie for ventilation and bake for 50-60 minutes until golden brown.</li>
+          <li>Let the pie cool before slicing and serve with vanilla ice cream if desired.</li>
+        </ol>
+      </div>
+    </div>
 
-  <h2>Rate this Recipe</h2>
-  <form>
-    <fieldset>
-      <legend>What skill level is the recipe?</legend>
-      <input type="radio" id="beginner" name="skill" value="beginner">
-      <label for="beginner">Beginner</label><br>
+    <footer class="footer">
+      <p>© 2024 Delicious Recipes. All rights reserved.</p>
+    </footer>
 
-      <input type="radio" id="intermediate" name="skill" value="intermediate">
-      <label for="intermediate">Intermediate</label><br>
-
-      <input type="radio" id="advanced" name="skill" value="advanced">
-      <label for="advanced">Advanced</label><br><br>
-
-      <input type="submit" value="Submit Rating">
-    </fieldset>
-  </form>
-
-  <meta name="author" content="[Arisha G]">
-
+  </div>
 </body>
 
 </html>
