--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
     </div>
 
     <footer class="footer">
-      <p>© 2024 Delicious Recipes. All rights reserved.</p>
+      <p>© 2024 Bellevue College Educational Purpose</p>
     </footer>
 
   </div>
